# Webcam_viewer_app

./: .gitignore  CMakeLists.txt  README.md
src/: cameramanager.cpp  cameramanager.h  main.cpp  mainwindow.cpp  mainwindow.h  test_window.cpp  videorecorder.cpp  videorecorder.h
